--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <li>The word "<b>bigger</b>" has 3 letters that appears in the solution, one of which is correctly placed and the other two is not.</li>
                     <li>The word "<b>affirm</b>" has 2 letters that appears in the solution, both are incorrectly placed.</li>
                     <li>The word "<b>reboot</b>" has 3 letters that appears in the solution, all are correctly placed.</li>
-                    <li>The word "<b>beacon</b>" has 2 letters that appears in the solution, both are correctly placed.</li>
+                    <li>The word "<b>beacon</b>" has 3 letters that appears in the solution, two of which are correctly placed and the other is not.</li>
                     <li>The word "<b>enable</b>" has 2 letter that appears in the solution, one of which is correctly placed and the other is not.</li>
                     <li>The word "<b>metals</b>" has no letter that appears in the solution.</li>
                 </ul>
